# SpatialTemporal_generalization_of_SITS_FM

./: .gitignore  1_dataset_explorer.ipynb  2_extract_embeddings.ipynb  3_get_images.ipynb  4_embeddings_analysis.ipynb  4_temporal_generalization.ipynb  5_spatial_generalization.ipynb  6_temporal_generalization.ipynb  7_generate_embedding.ipynb  README.md  cog.ipynb  embeddings.ipynb  explorer.ipynb  pyproject.toml
temporal_analysis/: 2_1_extract_embeddings_temporal.ipynb  3_get_images_temporal.ipynb
tessera_embeddings/: 1_create_roi_tiffs.ipynb  2_download_s1_s2.ipynb
tessera_embeddings/tessera_infer/: convert_npy2tiff.py  infer_all_tiles.sh  stitch_tiled_representation.py
tessera_embeddings/tessera_preprocessing/: convert_shp_to_tiff.py  dpixel_retiler.py  s1_fast_processor.py  s1_s2_downloader.sh  s1_s2_stacker.sh  s2_fast_processor.py  sanity_check.py
